--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ h3{
     color: #11999E;
 }
 .tool-tech-align{
-    width: 43.75rem;
+    /* width: 43.75rem; */
     margin: 0 auto;
 }
 .tool-head{
