--- a/css/about.css
+++ b/css/about.css
@@ -81,33 +81,41 @@ body{
     color: #1572A1;
     text-decoration: underline;
     font-style: normal;
+    width: 100%;
 }
 .year{
     color: #1572A1;
     text-decoration: underline;
     font-style: normal;
+    width: 100%;
 }
 .institute{
     color: #1572A1;
     text-decoration: underline;
     font-style: normal;
+    width: 100%;
 }
 .university{
     color: #1572A1;
     text-decoration: underline;
     font-style: normal;
+    width: 100%;
 }
 .percentage{
     color: #1572A1;
     text-decoration: underline;
     font-style: normal;
+    width: 100%;
 }
 .edu-table{
     text-align: left;
     margin: auto;
-    width: 80%;
-    font-size: 95%;
+    width: 90%;
     padding-bottom: 20px;
+    font-size: 85%;
+}
+.para{
+    width: 100%;
 }
 
 
