--- a/css/about.css
+++ b/css/about.css
@@ -3,15 +3,16 @@ body{
     padding: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
+    background-color: #FFF6EA;
 }
 .top-container{
     background-color: #FEFCF3;
 }
 .mid-container{
-    background-color: #FFF6EA;
+    background-color: #FFF8EA;
 }
 .bottom-container{
-    background-color: #FFF6EA;
+    background-color: #FFF8EA;
 }
 .id-images{
     position: absolute;
@@ -56,8 +57,8 @@ body{
     padding: 25px;
 }
 .achievement-image{
-    height: 6.25rem;
-    width: 6.25rem;
+    height: 20%;
+    width: 8%;
 }
 .personal-achievement{
     text-align: left;
@@ -69,14 +70,50 @@ body{
     margin: 0;
     padding: 15px;
 }
-.edu-animation{
-    height: 6.25rem;
-    width: 6.25rem;
-}
 .edu-details{
     color: #66BFBF;
     text-decoration: underline;
 }
-
-
-
+.edu-animation{
+    height: 20%;
+    width: 20%;
+    float: left;
+    padding-right: 20px;
+}
+.ug{
+    width: 60%;
+    margin: 0 auto;
+}
+.ug-content{
+    text-align: left;
+    padding-top: 6%;
+    line-height: 2;
+}
+.twelfth-gif{
+    height: 20%;
+    width: 20%;
+    float: right;
+    padding-left: 20px;
+}
+.twelfth{
+    width: 60%;
+    margin: 0 auto;
+}
+.twelfth-content{
+    padding-top: 10%;
+    text-align: right;
+}
+.tenth{
+    width: 60%;
+    margin: 0 auto;
+}
+.tenth-gif{
+    height: 20%;
+    width: 20%;
+    float: left;
+    padding-right: 20px;
+}
+.tenth-content{
+    padding: 9%;
+    text-align: left;
+}
