--- a/css/styles.css
+++ b/css/styles.css
@@ -51,16 +51,16 @@ h3{
     color: #11999E;
 }
 .char-image{
-    height: 6.25rem;
-    width: 6.25rem;
+    height: 10%;
+    width: 10%;
 }
 .automation-logo{
-    height: 9.375rem;
-    width: 9.375rem;
+    height: 10%;
+    width: 10%;
 }
 .coding-logo{
-    height: 9.375rem;
-    width: 9.375rem;
+    height: 10%;
+    width: 10%;
 }
 .software-testing{
     margin-left: auto;
@@ -83,10 +83,6 @@ h3{
     margin-left: auto;
     margin-right: auto;
     text-align: left;
-}
-.email-gif{
-    height: 4.375rem;
-    width: 4.375rem;
 }
 .message-me{
     font-family: 'Merriweather', serif;
@@ -123,6 +119,11 @@ h3{
 }
 .email-gif{
     float: left;
+    height: 80px;
+    width: 80px;
+}
+.toteP{
+    padding-top: 24px;
 }
 .contact-me{
     width: 18%;
@@ -140,14 +141,20 @@ h3{
     background-color: #FFF6EA;
 }
 .Tools-Tech{
-    height: 3.125rem;
-    width: 3.125rem;
+    height: 20%;
+    width: 24%;
+    float: left;
+}
+.ToTe{
+    width: 35%;
+    float: left;
+    padding-left: 15%;
 }
 .ToolTech-text{
     color: #11999E;
 }
 .tool-tech-align{
-    /* width: 43.75rem; */
+    width: 80%;
     margin: 0 auto;
 }
 .tool-head{
@@ -156,11 +163,20 @@ h3{
     padding-bottom: 1.875rem;
 }
 .exp-know-gif{
-    height: 3.125rem;
-    width: 3.125rem;
+    height: 20%;
+    width: 12.4%;
+    float: left;
+    padding-left: 10%;
 }
 .exp-know-link{
     color: #11999E;
+}
+.ExKn{
+    width: 68%;
+    margin: 0 auto;
+}
+.exknP{
+    padding-top: 40px;
 }
 .message-me:hover{
     border: 1px solid #dddd;
@@ -184,6 +200,7 @@ h3{
 }
 .Tools-Tech{
     padding-right: 10px;
+    padding-left: 25%;
 }
 .exp-know-gif{
     padding-right: 10px;
